# chess

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  ace  apm.lock.yaml  apm.yml  bitboard.cc  bitboard.h  board.cc  board.h  evaluate.cc  evaluate.h  init.cc  init.h  io.cc  io.h  main.cc  makemove.cc  makemove.h  move.cc  move.h  movegen.cc  movegen.h  movelist.cc  movelist.h  perft.cc  perft.h  pvtable.cc  pvtable.h  search.cc  search.h  (+8 more)
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md
.github/skills/ace-project-maintenance/: SKILL.md
.github/skills/chess-engine-development/: SKILL.md
.github/workflows/: ci.yml
_codeql_build_dir/src/main/: ace
_codeql_build_dir/test/perfttest/: perfttest
_codeql_build_dir/test/unittest/: unittest
build-test/test/perfttest/: perft.txt  perfttest
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  clang-format.cmake  clang-tidy.cmake  include-what-you-use.cmake  msvc-runtime.cmake
docs/: architecture.md  usage.md
src/: CMakeLists.txt
src/board/: CMakeLists.txt  bitboard.cc  bitboard.h  board.cc  evaluate.cc  makemove.cc  move.cc
src/board/include/board/: bitboard.h  board.h  evaluate.h  makemove.h  move.h  undo.h
src/io/: CMakeLists.txt  io.cc  uci.cc
src/io/include/io/: io.h  uci.h
src/main/: CMakeLists.txt  main.cc
src/search/: CMakeLists.txt  movegen.cc  movelist.cc  pvtable.cc  pvtable.h  search.cc  searchinfo.cc
src/search/include/search/: movegen.h  movelist.h  pvtable.h  search.h  searchinfo.h  searchstate.h
src/utils/: CMakeLists.txt  utils.cc
src/utils/include/utils/: exceptions.h  utils.h
test/: CMakeLists.txt  README.md  perft.cc  perft.txt
test/include/perft/: perft.h
test/perfttest/: CMakeLists.txt  perfttest.cc  perfttest.h
test/perfttest/include/perfttest/: perfttest.h
test/unittest/: CMakeLists.txt  bitboardtest.cc  boardtest.cc  boardtest.h  evaluatetest.cc  iotest.cc  iotest.h  makemovetest.cc  movegentest.cc  movelisttest.cc  movetest.cc  searchtest.cc  ucitest.cc  ucitest.h
test/unittest/include/unittest/: boardtest.h  ucitest.h  unittest.h
